<resources>
    <string name="app_name" translatable="false">Hunter Music</string>
    <string name="my">我的</string>
    <string name="home">首页</string>
    <string name="about">关于</string>
    <string name="check_for_updates">检查更新</string>
    <string name="open_source_code">使用开源项目</string>
    <string name="feedback">反馈</string>
    <string name="content">内容</string>
    <string name="upload">上传</string>
    <string name="contact">联系方式</string>
    <string name="login_by_uid">UID 登录</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="playlist">歌单</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <string name="play_songs_on_mobile">移动网络下播放歌曲</string>
    <string name="source_code">源代码</string>
    <string name="pitch">音高</string>
    <string name="song_info">歌曲信息</string>
    <string name="song_id">歌曲 ID</string>
    <string name="source">来源</string>
    <string name="type">类型</string>
    <string name="size">大小</string>
    <string name="bit_rate">比特率</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="pause_song_after_unplug_headset">拔出耳机后暂停播放</string>
    <string name="internet_playlist">在线歌单</string>
    <string name="local_playlist">本地歌单</string>
    <string name="new_playlist">新建歌单</string>
    <string name="import_playlist">导入歌单</string>
    <string name="local_music">本地</string>
    <string name="history">历史</string>
    <string name="contact_author">联系作者</string>
    <string name="author_email">moriafly@163.com</string>
    <string name="more">更多</string>
    <string name="comment">评论</string>
    <string name="music">音乐</string>
    <string name="artist">艺术家</string>
    <string name="update_log">更新日志</string>
    <string name="song_comment">歌曲评论</string>
    <string name="playlist_recommend">歌单推荐</string>
    <string name="switch_account">切换账号</string>
    <string name="login_by_phone">手机号登录</string>
    <string name="search">搜索</string>
    <string name="experimental">实验性</string>
    <string name="confirm">确定</string>
    <string name="version">%s - %s</string>
    <string name="open_source_introduction">开源介绍</string>
    <string name="send">发送</string>
    <string name="songs">%d 首</string>
    <string name="hot_search">热门搜索</string>
    <string name="playlist_number">播放列表（%d）</string>
    <string name="my_favorite_songs">喜欢</string>
    <string name="equalizer">均衡器</string>
    <string name="translation">翻译</string>
    <string name="download">下载</string>
    <string name="back">返回</string>
    <string name="remove_the_song">移除这首歌曲</string>
    <string name="add_to_netease_favorite">添加到网易云我喜欢</string>
    <string name="add_to_local_my_favorite">添加到本地我喜欢</string>
    <string name="recommend_new_songs">新歌速递</string>
    <string name="email">邮箱</string>
    <string name="personal_fm">私人 FM</string>
    <string name="cloud_drive">云盘</string>
    <string name="theme">主题</string>
    <string name="forced_dark_theme">强制深色主题</string>
    <string name="user_interface">用户界面</string>
    <string name="double_row_playlists">双列歌单</string>
    <string name="daily_recommendation">每日推荐</string>
    <string name="play_all">播放全部(%d)</string>
    <string name="join_qq_group">加入 QQ 交流群</string>
    <string name="sponsor">赞赏</string>
    <string name="play_queue">播放队列</string>
    <string name="top_list">排行榜</string>
    <string name="password">密码</string>
    <string name="cellphone_number">手机号</string>
    <string name="login_by_netease_cellphone_number">网易云手机号登录</string>
    <string name="exit_app">退出应用</string>
    <string name="alipay">支付宝</string>
    <string name="about_dso_music">关于 Dso Music</string>
    <string name="basic_information">基本信息</string>
    <string name="personal_profile">个人介绍</string>
    <string name="good_comments">精彩评论</string>
    <string name="home_sentence_recommendation">首页句子推荐</string>
    <string name="custom_background">自定义背景</string>
    <string name="custom_home_page_background">自定义主页背景</string>
    <string name="clear_background">清除背景</string>
    <string name="audio_focus">音频焦点</string>
    <string name="audio_focus_intro">开启后将不会与其他应用一起播放</string>
    <string name="auto_matching_of_network_lyrics">自动匹配网络歌词</string>
    <string name="intelligent_filter">智能过滤</string>
    <string name="intelligent_filter_sub">智能过滤掉一些音频文件</string>
    <string name="skip_wrong_song">跳过播放错误歌曲</string>
    <string name="filtering_audio_files">过滤录音文件</string>
    <string name="filtering_audio_files_sub">暂仅支持 Flyme</string>
    <string name="sliding_animation_of_songs_in_the_playlist">歌单歌曲滑动动画</string>
    <string name="navigation_bar_adaptations">导航栏适配</string>
    <string name="navigation_bar_adaptations_sub">若播放条过高，请关闭此选项</string>
    <string name="next_play">下一首播放</string>
    <string name="help_document">帮助文档</string>
    <string name="single_column_playlist">单列歌单</string>
    <string name="square_cd">方形唱片</string>
    <string name="square_cd_sub">开启后将关闭封面旋转动画和播放涟漪动画</string>
    <string name="dynamic_background">动态流光背景</string>
    <string name="dynamic_background_sub">开启后可能会引起设备性能问题</string>
    <string name="network">网络</string>
    <string name="landscape_hide_bars">横屏状态隐藏播放界面状态栏</string>
    <string name="clear">清除</string>
    <string name="track">单曲</string>
    <string name="singer">歌手(意思意思，界面很丑)</string>
    <string name="collection">收藏</string>
    <string name="slogan">为你全新而来</string>
    <string name="recommend">日推</string>
    <string name="recommended">推荐</string>
    <string name="hot">热门</string>
    <string name="latest">最新</string>


</resources>