<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SettingActivity">

    <com.hunterlc.hmusic.widget.TitleBarLayout
        android:id="@+id/titleBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:text="@string/settings">
    </com.hunterlc.hmusic.widget.TitleBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="96dp"
            android:orientation="vertical">

            <TextView
                style="@style/sub_title"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/theme"
                android:textColor="@color/colorSubTextForeground"
                android:textSize="12sp" />

            <com.hunterlc.hmusic.widget.ItemLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:itemType="item_no"
                app:text="@string/forced_dark_theme">

                <com.bitvale.switcher.SwitcherX
                    android:id="@+id/switcherDarkTheme"
                    style="@style/switcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.hunterlc.hmusic.widget.ItemLayout>

            <com.hunterlc.hmusic.widget.ItemLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:itemType="item_no"
                app:text="@string/square_cd">

                <com.bitvale.switcher.SwitcherX
                    android:id="@+id/switcherSquareCD"
                    style="@style/switcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/switcherSquareCDContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/square_cd_sub"
                    android:textColor="@color/colorSubTextForeground"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switcherSquareCD" />

            </com.hunterlc.hmusic.widget.ItemLayout>

            <com.hunterlc.hmusic.widget.ItemLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:itemType="item_no"
                app:text="@string/dynamic_background">

                <com.bitvale.switcher.SwitcherX
                    android:id="@+id/switcherDynamicBackground"
                    style="@style/switcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/switcherDynamicBackgroundContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/dynamic_background_sub"
                    android:textColor="@color/colorSubTextForeground"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switcherDynamicBackground" />

            </com.hunterlc.hmusic.widget.ItemLayout>

            <com.hunterlc.hmusic.widget.ItemLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:itemType="item_no"
                app:text="@string/single_column_playlist">

                <com.bitvale.switcher.SwitcherX
                    android:id="@+id/switcherSingleColumnPlaylist"
                    style="@style/switcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </com.hunterlc.hmusic.widget.ItemLayout>

            <com.hunterlc.hmusic.widget.ItemLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:itemType="item_no"
                app:text="@string/landscape_hide_bars">

                <com.bitvale.switcher.SwitcherX
                    android:id="@+id/switcherLandScapeHideBars"
                    style="@style/switcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </com.hunterlc.hmusic.widget.ItemLayout>

            <TextView
                style="@style/sub_title"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/network"
                android:textColor="@color/colorSubTextForeground"
                android:textSize="12sp" />

            <com.hunterlc.hmusic.widget.ItemLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:itemType="item_no"
                app:text="@string/play_songs_on_mobile">

                <com.bitvale.switcher.SwitcherX
                    android:id="@+id/switcherPlayOnMobile"
                    style="@style/switcher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.hunterlc.hmusic.widget.ItemLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>