<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPageBackground"
    tools:context=".ui.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:alpha="0.72"
            android:contentDescription="@string/back"
            android:padding="15dp"
            android:paddingBottom="10dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabBackground="@drawable/background_transparency"
            app:tabIndicator="@drawable/background_transparency"
            app:tabIndicatorColor="@color/colorAppThemeColor"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorGravity="bottom"
            app:tabMode="auto"
            app:tabPaddingEnd="2dp"
            app:tabPaddingStart="8dp"
            app:tabRippleColor="@color/colorTransparency"
            app:tabSelectedTextColor="@color/colorAppThemeColor"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:tabTextColor="@color/colorTextForeground">

            <!-- 两个tab -->
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_by_phone" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_by_uid" />

        </com.google.android.material.tabs.TabLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar">

    </androidx.viewpager2.widget.ViewPager2>


</androidx.constraintlayout.widget.ConstraintLayout>