<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".ui.fragment.MyFragment">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="96dp">

        <!-- 用户信息布局 -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clUser"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorTextForeground"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvLevel"
                    app:layout_constraintEnd_toStartOf="@+id/ivGoto"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivUser"
                    app:layout_constraintTop_toTopOf="@+id/ivUser" />

                <ImageView
                    android:id="@+id/ivGoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="18dp"
                    android:src="@drawable/ic_next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvLevel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivUser"
                    app:layout_constraintEnd_toStartOf="@+id/ivGoto"
                    app:layout_constraintStart_toEndOf="@+id/ivUser"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- 功能区 -->
        <LinearLayout
            android:id="@+id/llTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clLocal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivLocal"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_local_music"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local_music"
                    android:textColor="@color/colorTextForeground"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivLocal" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clUserCloud"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivUserCloud"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/history"
                    android:padding="5dp"
                    android:src="@drawable/ic_user_cloud"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud_drive"
                    android:textColor="@color/colorTextForeground"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivUserCloud" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clFavorite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/my_favorite_songs"
                    android:padding="6dp"
                    android:src="@drawable/local_page_follow_mark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/my_favorite_songs"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextForeground"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivFavorite" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPersonalFM"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/ivPersonalFM"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_personal_fm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_fm"
                    android:textColor="@color/colorTextForeground"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivPersonalFM" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clLatest"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivLatest"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/history"
                    android:padding="6dp"
                    android:src="@drawable/local_page_latest_mark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textColor="@color/colorTextForeground"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivLatest" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/tvInternetPlaylist"
            style="@style/sub_title"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp"
            android:text="@string/internet_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>