<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clTrack"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="?attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCover"
        android:transitionName="transCvCover"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="@dimen/defaultRadius"
        app:cardElevation="0dp"
        android:background="@color/colorTransparency"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivCover"
            android:transitionName="transIvCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

        <androidx.cardview.widget.CardView
            android:id="@+id/clFavorite"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            app:cardBackgroundColor="@color/colorTransparency"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivCover"
            app:layout_constraintStart_toStartOf="@+id/ivCover">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000">

                <TextView
                    android:id="@+id/tvPlayCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collection"
                    android:textAlignment="center"
                    android:layout_marginEnd="6dp"
                    android:textColor="#FFFFFF"
                    android:textSize="8sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivFavorite"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <ImageView
                    android:id="@+id/ivFavorite"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/collection"
                    android:padding="6dp"
                    android:src="@drawable/ic_mini_player_play_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:singleLine="true"
        android:text="@string/singer"
        android:textColor="@color/colorTextForeground"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvCover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:text="@string/singer"
        android:maxLines="2"
        android:textColor="@color/colorTextForeground"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvCover"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintBottom_toTopOf="@+id/tvTrackCount" />

    <TextView
        android:id="@+id/tvTrackCount"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:text="@string/songs"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvUpdateFrequency"
        app:layout_constraintStart_toEndOf="@+id/cvCover" />

    <TextView
        android:id="@+id/tvUpdateFrequency"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="14dp"
        android:text="@string/songs"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTrackCount" />
</androidx.constraintlayout.widget.ConstraintLayout>